# nginx-manager

./: Cargo.toml  README.md  install.sh  uninstall.sh
.github/workflows/: build-and-release.yml
deploy/: nginx-manager-cert-renew.service  nginx-manager-cert-renew.timer  nginx-manager.service
scripts/: renew-certs.sh
src/: app_state.rs  auth.rs  db.rs  handlers.rs  main.rs  models.rs  nginx_ops.rs
