[package]
name = "nginx-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
argon2 = "0.5"
axum = { version = "0.7", features = ["multipart"] }
axum-extra = { version = "0.9", features = ["cookie"] }
chrono = { version = "0.4", features = ["clock"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "fs", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
